package FuncoesBase;

public interface NavegadorInternet {
    void atualiazarPagina();
    void adicionarNovaAba();
    void exibirPagina(String url);
}
