package FuncoesBase;

public interface ReprodutorMusical {

    void selecionarMusica(String musica);
    void tocar();
    void pausar();
}
